# synth

./: pyproject.toml
synth/: cli.py  notes.csv
