[tool.poetry]
name = "synth"
version = "0.1.0"
description = ""
authors = ["Johannes C. Mayer <j.c.mayer240@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
pydub = "^0.25.1"
sounddevice = "^0.4.6"
pyaudio = "^0.2.14"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
